重构
Signed-off-by: procsl <program_chen@foxmail.com>