@@ -17,11 +17,11 @@
 
     <properties>
         <liquibase.version>4.15.0</liquibase.version>
-        <java.version>19</java.version>
-        <maven.compiler.target>19</maven.compiler.target>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.compilerVersion>19</maven.compiler.compilerVersion>
-        <compiler.version>19</compiler.version>
+        <!--        <java.version>19</java.version>-->
+        <!--        <maven.compiler.target>19</maven.compiler.target>-->
+        <!--        <maven.compiler.source>19</maven.compiler.source>-->
+        <!--        <maven.compiler.compilerVersion>19</maven.compiler.compilerVersion>-->
+        <!--        <compiler.version>19</compiler.version>-->
     </properties>
 
     <dependencies>
@@ -76,7 +76,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
+                        <!--                        <arg>&#45;&#45;enable-preview</arg>-->
                         <arg>-Xlint:preview</arg>
                     </compilerArgs>
                 </configuration>
